--- a/punto1-2-3/styles/common-styles.css
+++ b/punto1-2-3/styles/common-styles.css
@@ -2,9 +2,18 @@ a{
     font-family: 'Jost';
 }
 button{
-    padding: 10px 25px;
+    padding: 15px 25px;
     font-family: 'Jost';
     font-weight: bold;
     border-radius: 10px;
     cursor: pointer;
+}
+p{
+    font-family: 'Jost';
+    font-size: 14px;
+}
+.button--orange{
+    background-color: #FD909E;
+    color: #fff;
+    border: none;
 }
