--- a/punto1-2-3/styles/common-styles.css
+++ b/punto1-2-3/styles/common-styles.css
@@ -17,3 +17,12 @@ p{
     color: #fff;
     border: none;
 }
+h2{
+    font-family: 'Jost';
+    font-size: 45px;
+    color: #010851;
+    line-height: 124%;
+    letter-spacing: -1%;
+    margin: 0;
+}
+
