--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-    color: #000000b5;
+    color: #000000;
     font-family: system-ui, -apple-system;
   }
   
@@ -42,7 +42,7 @@ body {
   
   p {
     margin: 40px 0 30px;
-    color: #000000ae;
+    color: #000000;
     font-size: 17px;
     border-bottom: 1px solid;
   }
